--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,7 @@
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -20,5 +24,5 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  max-width: 100vw;
 }
-
