--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,10 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  .Toastify__toast-container {
+    z-index: 200000;
+  }
 }
 
 body {
